:bug: Fix: wall-container 가장자리 잘리는 문제로 overflow 속성 삭제

--- a/assets/css/_world.scss
+++ b/assets/css/_world.scss
@@ -358,7 +358,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
 
     .wall {
         position: absolute;
