--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1361,7 +1361,6 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
 .wall-container .wall {
